3.4/programs-web-interface-cluster.md
---
layout: default
description: The cluster section displays statistics about the general cluster performance
---
Cluster
=======

The cluster section displays statistics about the general cluster performance.

![Cluster](images/clusterView.png)

Statistics:

 - Available and missing coordinators
 - Available and missing database servers
 - Memory usage (percent)
 - Current connections
 - Data (bytes)
 - HTTP (bytes)
 - Average request time (seconds)

Nodes
-----
 
### Overview

The overview shows available and missing coordinators and database servers.

![Nodes](images/nodesView.png)

Functions:

- Coordinator Dashboard: Click on a Coordinator will open a statistics dashboard.

Information (Coordinator / Database servers):

- Name
- Endpoint
- Last Heartbeat
- Status
- Health

### Shards

The shard section displays all available sharded collections.

![Shards](images/shardsView.png)

Functions:

- Move Shard Leader: Click on a leader database of a shard server will open a move shard dialog. Shards can be
  transferred to all available database servers, except the leading database
  server or an available follower.
- Move Shard Follower: Click on a follower database of a shard will open a move shard dialog. Shards can be
  transferred to all available database servers, except the leading database
  server or an available follower.
- Rebalance Shards: A new database server will not have any shards. With the
  rebalance functionality the cluster will start to rebalance shards including
  empty database servers.

Information (collection):

- Shard
- Leader (green state: sync is complete)
- Followers
